--- a/src/security-server/admin-service/ui/src/locales/pt-BR.json
+++ b/src/security-server/admin-service/ui/src/locales/pt-BR.json
@@ -374,6 +374,8 @@
       "account_creation_failure": "Falha ao criar conta no servidor ACME. Se for necessário vincular conta externa, verifique se as credenciais estão corretas no acme.yml",
       "account_key_pair_error": "Falha ao obter o par de chaves da conta ACME",
       "account_keystore_password_missing": "Senha do keystore da conta ACME ausente no arquivo de configuração acme.yml",
+      "acme_yaml_missing": "Arquivo de configuração ACME acme.yml está ausente",
+      "acme_yaml_account_keystore_password_update_error": "Falha ao atualizar a senha do keystore da conta ACME no arquivo de configuração acme.yml",
       "authorization_failure": "Falha na autorização. Normalmente está relacionado à validação de propriedade do domínio",
       "authorization_wait_failure": "Falha ao aguardar a conclusão da autorização",
       "certificate_failure": "Falha ao obter certificado do servidor ACME",
