--- a/src/packages/src/xroad/ubuntu/generic/changelog
+++ b/src/packages/src/xroad/ubuntu/generic/changelog
@@ -3,7 +3,7 @@ xroad (7.7.1-1) stable; urgency=medium
   * Change history is found at /usr/share/doc/xroad-
     common/CHANGELOG.md.gz
 
- -- NIIS <info@niis.org>  Thu, 08 Des 2025 11:23:07 +0300
+ -- NIIS <info@niis.org>  Tue, 23 Dec 2025 21:23:07 +0000
 
 xroad (7.7.0-1) stable; urgency=medium
 
