fix: disable management service connection test when default query parameters are not set

--- a/src/security-server/admin-service/ui/src/locales/et.json
+++ b/src/security-server/admin-service/ui/src/locales/et.json
@@ -1033,7 +1033,7 @@
     "diagnostics": {
       "overview": "Ülevaade",
       "traffic": "Päringute statistika",
-      "connectionTesting": "Ühenduse testimine"
+      "connectionTesting": "Ühenduste testimine"
     }
   },
   "token": {
