--- a/src/shared-ui/src/locales/tk.json
+++ b/src/shared-ui/src/locales/tk.json
@@ -36,7 +36,7 @@
     "noData": "Maglumat ýok",
     "ok": "Ok",
     "previous": "Öňündäki",
-    "refresh": "Обновить",
+    "refresh": "Täzele",
     "register": "Hasaba al",
     "remove": "Aýyr",
     "removeAll": "Ählisini aýyr",
